*SVN*

* The deployment recipes are now opt-in. Just do 'load "deploy"' in your recipe script. [Jamis Buck]

* Added $CAPISTRANO:HOST$ placeholder in commands, which will be replaced with the name of the host on which the command is executing [Jamis Buck]

* Added -e switch to explain specific task. Added -X to extend -x. Made -h much briefer. Added -T to list known tasks. [Jamis Buck]

* Added namespaces for tasks [Jamis Buck]

* Merged the Configuration and Actor classes, performed various other massive refactorings of the code [Jamis Buck]

*1.4.1* (February 24, 2007)

* Use the no-auth-cache option with subversion so that username/password tokens do not get cached by capistrano usage [jonathan]

* Deprecated upper-cased variables [Jamis Buck]

* Make sure Actor#get does not close the SFTP channel (so subsequent SFTP operations work) [Dov Murik]

* Add :env option to 'run' (and friends) so that you can specify environment variables to be injected into the new process' environment [Mathieu Lajugie]


*1.4.0* (February 3, 2007)

* Use the auth info for subversion more consistently [Jamis Buck]

* Add a "capture" helper, for capturing the stdout of a remote command and returning it as a string [Jamis Buck]

* Add a "get" helper, to pull a file from a remote server to the localhost [bmihelac]

* Fix gateway to actually increment local_port if a port is in use, so that multiple capistrano instances can run at the same time [Mark Imbriaco]

* Refactor the permissions tweaking in update_code to a separate task so that people on shared hosts can override it as necessary [jaw6]

* Set umask during the setup task, so that intermediate directories are created with the proper permissions [NeilW]

* Removed -c/--caprc switch, since the new load order renders it meaningless (just use -f now) [Mike Bailey]

* Make sure the standard recipe loads first, so that .caprc and friends can override what it defines. [Mike Bailey]
